# fastapi_template

./: .env.example  README.md  main.py  pyproject.toml
app/: __init__.py
app/core/: __init__.py  exception_handlers.py  exceptions.py  json_encoders.py  responses.py
app/routers/: __init__.py
app/routers/test/: __init__.py  test.py
app/routers/v1/: __init__.py  health.py
app/schemas/: __init__.py  base.py
app/settings/: __init__.py  config.py
